# optimalgiv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
optimalgiv/: __init__.py  _bridge.py  _env_tools.py
tests/: test_pc_functionality.py
