[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "optimalgiv"
version         = "0.2.1post2"
description     = "Python ⇄ Julia bridge for the OptimalGIV package"
authors         = [ { name="Marco Zhang" }, { name="Julie Z. Fu" } ]
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }

dependencies = [
    "pandas >= 1.5",
    "numpy >= 1.22",
    "scipy >= 1.9",
    "juliacall >= 0.9.26",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "pytest-xdist >= 3.0",
]

[project.urls]
"Source" = "https://github.com/FuZhiyu/optimalgiv"

[tool.setuptools]
packages = ["optimalgiv"]
include-package-data = true

[tool.setuptools.package-data]
optimalgiv = ["juliapkg.json"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
]
